<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context="fiap.com.br.pointcred.InicioActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="false"
        android:contentDescription="@string/logoapp_inicio"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="false"
        android:layout_marginTop="60dp"
        app:srcCompat="@mipmap/ic_logo" />

    <TextView
        android:id="@+id/tv_BemVindo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="230dp"
        android:text="@string/bem_vindo_inicio"
        android:textAllCaps="false"
        android:textColor="@color/colorText"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btn_Login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:layout_marginTop="280dp"
        android:text="@string/experimente_agora_inicio"
        android:onClick="FazerLogin"
        android:textAllCaps="false"
        android:textColor="@color/colorText"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_CriarConta"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="false"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="330dp"
        android:onClick="CriarConta"
        android:text="@string/criar_uma_conta_inicio"
        android:textAllCaps="false"
        android:textColor="@color/colorText"
        android:textSize="20sp" />

</RelativeLayout>
