<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_Nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="Nome"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_Cpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="75dp"
            android:ems="10"
            android:hint="CPF"
            android:inputType="number" />

        <EditText
            android:id="@+id/et_Idade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="120dp"
            android:ems="10"
            android:hint="Idade"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/et_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="165dp"
            android:ems="10"
            android:hint="Email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_Senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="210dp"
            android:ems="10"
            android:hint="Senha"
            android:inputType="textPassword" />

    </RelativeLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="255dp"
        android:columnCount="2">


        <EditText
            android:id="@+id/et_Rua"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginTop="5dp"
            android:layout_row="2"
            android:ems="10"
            android:hint="@string/rua_Cadastro"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_Numero"
            android:layout_width="91dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginTop="5dp"
            android:layout_row="3"
            android:ems="10"
            android:hint="@string/numero_Cadastro"
            android:inputType="number" />

        <EditText
            android:id="@+id/et_Complemento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="5dp"
            android:layout_row="3"
            android:ems="10"
            android:hint="@string/complemento_Cadastro"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_Cidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginTop="5dp"
            android:layout_row="4"
            android:ems="10"
            android:hint="@string/cidade_Cadastro"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_Estado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginTop="5dp"
            android:layout_row="5"
            android:ems="10"
            android:hint="@string/estado_Cadastro"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_Cep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="6"
            android:ems="10"
            android:hint="@string/cep_Cadastro"
            android:inputType="number" />

        <Button
            android:id="@+id/btn_Cadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_column="0"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="20dp"
            android:text="Cadastrar"
            android:textColor="@color/colorText"
            android:textAllCaps="false" />

    </GridLayout>


</RelativeLayout>